app: Xmas has passed

--- a/inst/rmd/app.Rmd
+++ b/inst/rmd/app.Rmd
@@ -6,7 +6,7 @@ title: "`r paste('Shinyscreen', packageVersion('shinyscreen'))`"
 ---
 
 ```{r, echo=FALSE}
-htmltools::img(src = knitr::image_uri(system.file(package="shinyscreen","www/shinyscreen_ny.png")), 
+htmltools::img(src = knitr::image_uri(system.file(package="shinyscreen","www/shinyscreen2.png")), 
                alt = 'logo', 
                style = 'position:absolute; top:0; right:0; padding:5px;')
 ```
