mix,shiny-ui-base,app: Add capability to export summary
Now, one can export Emmas-MetFrag-script-compatible summary file.

* R/mix.R(add_msms_peaks): New function.

* R/shiny-ui-base.R(exportsumm_b,export_summ_ui): New observer/output.

* inst/rmd/app.Rmd(export_summ_ui): New element.

--- a/inst/rmd/app.Rmd
+++ b/inst/rmd/app.Rmd
@@ -485,6 +485,10 @@ DT::DTOutput("compound_ms2_spectrum")
 uiOutput("update_summ_ui")
 ```
 
+```{r, echo=F}
+uiOutput("export_summ_ui")
+```
+
 ## Viewer
 
 ```{r, echo=F}
