--- a/inst/rmd/app.Rmd
+++ b/inst/rmd/app.Rmd
@@ -455,19 +455,20 @@ actionButton(inputId = "sortsubset_b",
 
 ## Browser
 
-<details><summary>Manual quality control step.</summary>
+<details><summary>Manual quality analysis (QA) step</summary>
 
-After the data extraction is finished, the quality of the retrieved
-spectra can be checked using the criteria defined in the
-_Prescreening_ tab of the _Configuration_ Section. The resulting
-_summary table_ is given below and is based on the prescreening
-criteria and filter and ordering setup specified in _Filter and order
-the summary table_ configuration subsection.
+After the automatic quality control check based on 
+the criteria defined in the _Prescreening_ tab of the _Configuration_ Section is done , the resulting
+_summary table_ is given below to manually update the quality of the retrieved spectra.
 
-```{r, echo=FALSE}
-actionButton(inputId = "updatesumm_b",
-             label = "Browser")
-```
+To update the sumary table,
+
+* Click any row for MS1 table and the corresponding MS2 peaks are shown on the right pane.
+
+* Manual QA can be updated by double clicking on the required QA fields namely _MS1/MS2 match?_, _Above threshold_, _MS2 exists_ after inspecting the peaklist. 
+
+* To save the changes, click the _Commit manual QA_ tab and the summary table can be exported as _CSV_ file by clicking the _Export MS1/MS2 summary_ tab.
+
 
 <div style="display: flex; vertical-align: top;margin: auto;">
 
@@ -504,6 +505,14 @@ uiOutput("export_summ_ui")
 ```
 
 ## Viewer
+
+<details><summary> Visualize the plots </summary>
+
+* For any given ID, the MS1 and MS2 fragments can be visualized by selecting the corrsponding row in the table.
+
+* The user can zoom-in by selection the reion of interest using the cursor and double click to zoom-out.
+
+*The user can select multiple rows to display different plots  and allows the user to save individual plot by clicking _save this plot_ tab or save all the plots. 
 
 ```{r, echo=F}
 sidebarLayout(sidebarPanel(DT::DTOutput("plot_comp_select"),
@@ -564,8 +573,15 @@ sidebarLayout(sidebarPanel(DT::DTOutput("plot_comp_select"),
 
 ```
 
+```{r, echo=FALSE}
+actionButton(inputId = "updatesumm_b",
+             label = "Browser")
+```
 
-
+```{r, echo=FALSE}
+actionButton(inputId = "plot_ext",
+             label = "Viewer")
+```
 <!-- ENGINE -->
 
 ```{r, echo = F, context = 'setup'}
