few typos corrected

--- a/inst/rmd/app.Rmd
+++ b/inst/rmd/app.Rmd
@@ -458,12 +458,11 @@ actionButton(inputId = "sortsubset_b",
 <details><summary>Manual quality analysis (QA) step</summary>
 
 After the automatic quality control check based on 
-the criteria defined in the _Prescreening_ tab of the _Configuration_ Section is done , the resulting
-_summary table_ is given below to manually update the quality of the retrieved spectra.
+the criteria defined in the _Prescreening_ tab is done , the resulting _summary table_ is given below to manually update the quality of the retrieved spectra.
 
 To update the sumary table,
 
-* Click any row for MS1 table and the corresponding MS2 peaks are shown on the right pane.
+* Click any row of MS1 table and the corresponding MS2 peaks are shown on the right side pane.
 
 * Manual QA can be updated by double clicking on the required QA fields namely _MS1/MS2 match?_, _Above threshold_, _MS2 exists_ after inspecting the peaklist. 
 
@@ -509,11 +508,11 @@ uiOutput("export_summ_ui")
 
 <details><summary> Visualize the plots </summary>
 
-* For any given ID, the MS1 and MS2 fragments can be visualized by selecting the corrsponding row in the table.
+* For any given ID, the MS1 and MS2 fragments can be visualized by selecting the corresponding row in the table.
 
-* The user can zoom-in by selection the reion of interest using the cursor and double click to zoom-out.
+* The user can zoom-in by selection the region of interest using the cursor and double click to zoom-out.
 
-* The user can select multiple rows to display different plots  and allows the user to save individual plot by clicking _save this plot_ tab or save all the plots. 
+* The user can select multiple rows to display different plots  and allows the user to save all the plots or save individual plot by clicking _save this plot_ tab.
 
 </details>
 
